--- a/pages/components/template7/detail-components/contact/ContactSection.module.css
+++ b/pages/components/template7/detail-components/contact/ContactSection.module.css
@@ -125,3 +125,54 @@
     font-size: 13px;
   }
 }
+
+
+
+/* Thank You Popup */
+.thankYouPopup {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: #ffffff;
+    width: 90%;
+    max-width: 400px;
+    box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.2);
+    z-index: 1000;
+    border-radius: 8px;
+  }
+  
+  .thankYouContent {
+    padding: 20px;
+    text-align: center;
+  }
+  
+  .thankYouContent h2 {
+    font-size: 1.5rem;
+    color: #2c3e50;
+    margin-bottom: 10px;
+  }
+  
+  .thankYouContent p {
+    font-size: 1rem;
+    color: #555;
+    margin-bottom: 20px;
+  }
+  
+  .closeButton {
+    padding: 10px 20px;
+    background-color: #e63946;
+    color: white;
+    font-size: 1rem;
+    border: none;
+    border-radius: 6px;
+    cursor: pointer;
+    font-weight: bold;
+    text-transform: uppercase;
+    transition: background-color 0.3s ease;
+  }
+  
+  .closeButton:hover {
+    background-color: #d62f3a;
+  }
+  
